--- a/wrapper/pages/html/create.html
+++ b/wrapper/pages/html/create.html
@@ -77,9 +77,9 @@
 			</a>
 		</div>
 		<div class="theme">
-			<a href="http://localhost:4343/cc_browser?themeId=business">
-				<img src="../img/themelist/Business_Friendly.jpg" alt="Business Friendly">
-				<p>Business Friendly</p>
+			<a href="http://localhost:4343/go_full?tray=beta">
+				<img src="../img/themelist/Yugandars_World_2.0.jpg" alt="Yugandar's World 2.0">
+				<p>Yugandar's World</p>
 			</a>
 		</div>
 		<div class="theme">
@@ -138,9 +138,9 @@
 			</a>
 		</div>
 		<div class="theme">
-			<a href="http://localhost:4343/go_full?tray=business">
-				<img src="../img/themelist/Business_Friendly.jpg" alt="Business Friendly">
-				<p>Business Friendly</p>
+			<a href="http://localhost:4343/go_full?tray=yugandar}">
+				<img src="../img/themelist/Yugandars_World_2.0.jpg" alt="Yugandar's World 2.0">
+				<p>Yugandar's World 2.0</p>
 			</a>
 		</div>
 		<div class="theme">
