--- a/wrapper/pages/html/create.html
+++ b/wrapper/pages/html/create.html
@@ -138,7 +138,7 @@
 			</a>
 		</div>
 		<div class="theme">
-			<a href="http://localhost:4343/go_full?tray=yugandar}">
+			<a href="http://localhost:4343/go_full?tray=yugandar">
 				<img src="../img/themelist/Yugandars_World_2.0.jpg" alt="Yugandar's World 2.0">
 				<p>Yugandar's World 2.0</p>
 			</a>
